# stm32f407vgt6-lckfb-skystar

./: .config  CMakeLists.txt  Kconfig  README.md  SConstruct  project.ewp  project.uvproj  project.uvprojx  rtconfig.h  template.uvoptx  template.uvprojx
applications/: main.c
board/: Kconfig  SConscript  board.c
board/CubeMX_Config/: .cproject  .mxproject  .project  CubeMX_Config.ioc
board/CubeMX_Config/Core/Src/: main.c  stm32f4xx_hal_msp.c
libraries/HAL_Drivers/: SConscript
